--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: lemonchiffon;
+  background-color: rgb(253, 251, 232);
 }
 body h1 {
   margin-bottom: 2rem;
@@ -25,4 +25,34 @@ body h1 {
   background-color: whitesmoke;
   margin-bottom: 10px;
   font-size: 30px;
+}
+
+.calculator__buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+.calculator__button {
+  border-radius: 8px;
+  border: 9px solid transparent;
+  margin: 1px;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  background-color: rgb(105, 166, 170);
+  color: white;
+  cursor: pointer;
+}
+.calculator__button:hover {
+  background-color: tan;
+}
+.calculator__button:active {
+  transform: scale(0.9);
+  background-color: lightgray;
+}
+.calculator__button--double-width {
+  grid-column-end: span 2;
+}
+.calculator__button--operator {
+  color: black;
 }/*# sourceMappingURL=styles.css.map */
