--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Share+Tech+Mono&display=swap");
 body {
   height: 100vh;
   display: flex;
@@ -55,4 +56,13 @@ body h1 {
 }
 .calculator__button--operator {
   color: black;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Share Tech Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
 }/*# sourceMappingURL=styles.css.map */
