--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,12 +20,14 @@ body h1 {
 }
 .calculator__display {
   max-height: 100px;
-  width: 100%;
+  width: 95%;
   border: none;
   text-align: right;
   background-color: whitesmoke;
   margin-bottom: 10px;
   font-size: 30px;
+  padding-right: 5%;
+  font-weight: 200;
 }
 
 .calculator__buttons {
@@ -39,7 +41,7 @@ body h1 {
   margin: 1px;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
   background-color: rgb(105, 166, 170);
   color: white;
   cursor: pointer;
@@ -62,7 +64,7 @@ body h1 {
   margin: 0;
   padding: 0;
   font-family: "Share Tech Mono", monospace;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
   line-height: 1.5;
 }/*# sourceMappingURL=styles.css.map */
