--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -14,7 +14,7 @@
         padding: 0.6em 1.2em;
         font-size: 1em;
         font-weight: 600;
-        background-color: rgb(105, 166, 170);
+        background-color: #a97c73;
         color: white;
         cursor: pointer;
 
