--- a/src/styles/_calculator.scss
+++ b/src/styles/_calculator.scss
@@ -2,7 +2,7 @@
     max-width: 400px;
     padding: 20px;
     border-radius: 10px;
-    background-color: white;
+    background-color: #414535;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
 
     // input tag (num display)
