--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(253, 251, 232);
+    background-color: #96bbbb;
 
     h1 {
         margin-bottom: 2rem;
